# py-openrpc-generator

./: ARCHITECTURE.md  LICENSE  README.md  py-openrpc-generator.spec  pyproject.toml
.github/workflows/: build.yml
examples/: README.md  advanced-client.ts  advanced-server.go  example-server.go  example-spec-advanced.json  example-spec.json  generated-client.ts  test-client.ts
src/py_openrpc_generator/: __init__.py  cli.py
src/py_openrpc_generator/generators/: base.py  golang.py  golang_converter.py  typescript.py  typescript_converter.py
src/py_openrpc_generator/templates/: golang-gorilla-main.go.jinja2  golang-gorilla-server.go.jinja2  golang-gorilla-types.go.jinja2  typescript-client.ts.jinja2
